# paperbanana-lite

./: .gitignore  README.md  SKILL.md  pyproject.toml
references/: reference-set-format.md
scripts/: paperbanana_lite.py
