[project]
name = "paperbanana-lite"
version = "0.1.0"
description = "Single-file academic illustration generation pipeline using Gemini"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "google-genai",
    "pillow",
    "tenacity",
]

[project.scripts]
paperbanana-lite = "paperbanana_lite:main"
